# numfu

./: .gitignore  404.html  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  docs.html  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml  relase.yml
assets/css/: styles.941e47e9.css
assets/js/: 0058b4c6.e8908718.js  00871698.14876237.js  00871698.ded8d28f.js  17896441.b3cc5fba.js  23221995.076ba3be.js  23221995.fbfdf600.js  237.4f52d05c.js  28.cfc7cb5f.js  2d003b64.74a86623.js  2d003b64.fb1ff83c.js  335fbb22.696f670e.js  335fbb22.a3a75205.js  41c0ab7b.6f565ff1.js  41c0ab7b.e5480821.js  4baf1cbb.e461aaa7.js  4baf1cbb.f3f940c5.js  5e95c892.3b32b160.js  63e309d9.136f7a7f.js  63e309d9.d4ac2978.js  6405d9f2.e2e8f69f.js  6405d9f2.f98d4861.js  70633fc1.483daada.js  70633fc1.d2705798.js  74b42cdb.b3493b92.js  74b42cdb.cf48fc01.js  7eb837fd.691ae4e9.js  7eb837fd.8647e0f0.js  9eabb0fb.81b7f3b3.js  9eabb0fb.95c57d0b.js  a7456010.c56d89d1.js  a7bd4aaa.ad3a94e0.js  a94703ab.273bed19.js  aba21aa0.3b6c54c8.js  aed84348.4bac4efb.js  aed84348.ce011fd9.js  c4f5d8e4.0f7778d5.js  c4f5d8e4.2585f622.js  ca9435bf.0a7d7889.js  ca9435bf.10f3706c.js  d35b311e.8152e3de.js  (+10 more)
docs/: index.md  readme.md
docs/guide/: arithmetic.html  arithmetic.md  basic-syntax.html  basic-syntax.md  booleans.html  booleans.md  functions.html  functions.md  lists.html  lists.md  modules.html  modules.md  operators.html  operators.md  partial-application.html  partial-application.md  printing.html  printing.md  strings.html  strings.md  variables.html  variables.md
docs/reference/: builtins.html  builtins.md  cli.html  cli.md  stdlib.html  stdlib.md
docusaurus/: .stylelintrc.json  docusaurus.config.js  package-lock.json  package.json  sidebars.js
examples/: bubblesort.nfu  helloworld.nfu  matrices.nfu  quicksort.nfu  statistics.nfu
scripts/: build.sh  install.sh  make_ico.py  tests.sh  update_versions.sh
src/numfu/: __init__.py  _version.py  ast_types.py  builtins.py  classes.py  cli.py  errors.py  interpreter.py  modules.py  parser.py  (+3 more)
tests/: basics.nfu  builtins.nfu  edgecases.nfu  functions.nfu  imports.nfu  lists.nfu  logic.nfu  math.nfu  maths.nfu  operators.nfu  recursion.nfu  strings.nfu
(+35 files in other folders)
