[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numfu"
version = "0.1"
description = "Parser and interpreter for the NumFu programming language"
authors = [{ name = "Raphael Engel", email = "hello@alpharee.de" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    "lark==1.2.2",
    "lark_parser==0.12.0",
    "prompt_toolkit==3.0.51",
    "rich==14.0.0",
    "mpmath==1.3.0",
]

[project.scripts]
numfu = "numfu:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
numfu = ["grammar/numfu.lark", "stdlib/*.nfut"]
